--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -38,12 +38,36 @@ tags:
 ### 现代计算机
 首先，计算机最基本的5大组成部分分别为：输入设备(比如键盘), 存储器(比如内存), 运算器(cpu), 控制器(cpu), 输出设备(显示器)。
 
+* 运算器负责程序运算与逻辑判断等操作
+* 控制器负责协调各周边组件与各单元间的工作
+
+控制器包括：
+程序计数器PC（也叫指令计数器）。存放指令，数据的地址。
+指令寄存器IR。根据程序计数器存放的地址取出指令后，存放在这。
+指令译码器。指令译码器翻译指令要做的事。
+时序部件。控制操作流程。
+
+> 指令包括操作码和地址码，地址码存的是这个指令用到的数据的地址。
+
+运算器包括：
+算术逻辑单元ALU。算术逻辑运算。
+累加寄存器。暂时存放中间结果。
+数据缓冲寄存器。暂存 cpu 和 主存间要传输的数据。
+状态条件寄存器。存储一些状态信息。
+
+指令寻址方式：
+立即寻址方式：操作数直接在指令中，速度快，灵活性差
+直接寻址方式：指令中存放的是操作数的地址，存放在主存。
+间接寻址方式：指令中存放了一个地址，这个地址对应的内容是操作数的地址。都存放在主存。
+寄存器寻址方式：寄存器存放操作数
+寄存器间接寻址方式：寄存器内存放的是操作数的地址，而操作数存放在主存中。
+
 ![img.png](/img/计算机硬件组成.png)
 
 上图的实线是数据线，是数据交换的通路，虚线是控制线和反馈线，是传递命令的通路
 
 - 首先我们的数据通过输入设备会被加工程计算机能够识别的0101的形式，我们直接输入的代码计算机是不认识的。
-- 然后经过输入设备处理的数据，先存到了存储器里（控制器控制输入设备），存储器可以存放数据和程序指令
+- 然后经过输入设备处理的数据，先存到了主存里（控制器控制输入设备），存储器可以存放数据和程序指令
 - 然后控制器可以直接从存储器里取得所需要执行的程序指令，取得指令后，控制器会分析指令要做什么（指令分为操作码和地址码），分析的就是操作码，到底要干嘛
 - 假设分析出来是读取数据的操作，也就是从存储器中取一个数据给运算器，那么读取数据的地址就在写在地址码里面，这时运算器就去就告诉存储器要取数据的地址，然后存储器直接把数据传递给运算器
 - 最后运算结束，运算结果会返回存储器，存储器可以直接把结果返回给输出设备（在控制器的控制下）
@@ -76,6 +100,25 @@ tags:
 局部性原理是层次化存储结构的支撑
 - 时间局部性：刚被访问的内容，立即又被访问。
 - 空间局部性：刚被访问的内容，临近的空间很快被访问。
+
+### flynn体系结构
+![img.png](/img/flynn体系结构.png)
+
+### cpu 流水线技术
+处理指令是按照“取指”-“分析”-“执行”。没使用流水线技术就是每个指令走完这个过程后，再对下个指令重复这个步骤。
+
+使用流水线技术后：
+![img.png](/img/流水线技术.png)
+
+流水线执行时间：(t1+t2+t3) + (n-1)t。其中 t 是流水线周期中执行时间最长的一段。比如取指4，分析2，执行2单位之间。t就是4。
+
+例:若指令流水线把一条指令分为取指、分析和执行三部分，且三部分的时间分别是取指2ns，分析2ns，执行1ns。那么，流水线周期是?100条指令全部执行完毕
+需要的时间就是?
+
+解答:(2+2+1)+(100-1)x2=203ns
+
+通常可以将计算机系统中执行一条指令的过程分为取指令、分析和执行指令3步，若取指令时间为4△t，分析时间为2At，执行时间为3t，按照顺序方式从头到尾执行
+完600条指令所需时间为(5400)△t;若按照执行第i条、分析第i+1条、读取i+2条重叠的流水线方式执行指令，则从头到尾执行完600条指令所需时间为(2405)t。
 
 ## 计算机网络的定义
 计算机网络定义为“以能够相互共享资源的方式互连起来的自治计算机系统的集合”。
@@ -168,6 +211,40 @@ MAC地址表更新机制
 > 校验即CRC校验
 
 mac 地址采用6字节48比特位
+
+### 冲突域和广播域
+
+集线器构成一个冲突域和一个广播域。无法分割广播域和冲突域。
+
+> 在集线器上，监控一个端口就能捕获其他所有端口的通信流量。
+
+交换机每个端口独立构成一个冲突域，所有端口共同构成一个广播域。可以分割冲突域，无法分割广播域。
+
+> 每个端口收发数据的时候不会引起冲突。如果发送广播包，广播包能到达交换机的所有范围区域。
+
+路由器每个端口是独立的广播域。可以分割冲突域和广播域。
+
+> 路由器接收到网络信息不会进行转发
+
+![img.png](/img/冲突域和广播域计算.png)
+
+### VLAN（虚拟局域网）
+虚拟局域网解决在广播域中产生大量广播导致与数据流竞争带宽，消耗设备资源的问题。
+
+虚拟局域网将一台物理的交换机通过VLAN的划分，变成逻辑上完全独立的交换机，每个VLAN都是一个单独的广播域。
+
+好处：
+* 安全性:通过VLAN的划分隔离不同的部门，减少保密信息遭到破坏的可能性。（VLAN之间无法直接通信，需要配置）
+* 性能提高:将二层网络划分成多个逻辑工作组(广播域)减少网络间不必要的数据流并提升性能。
+* 缩小广播域:减少一个广播域上的设备数量。
+
+### 层次化结构设计
+三层：服务器-局域网核心交换机-局域网汇聚交换机-局域网接入交换机-用户
+
+![img.png](/img/层次化结构设计.png)
+
+### 综合布线技术
+![img.png](/img/综合布线技术.png)
 
 ### 网络协议
 网络协议是计算机网络和分布系统中互相通信间的对等层实体交换信息时必须遵守的规则的集合。
