--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -37,7 +37,15 @@ tags:
 冯诺依曼体系是以运算器为核心的，我们现代的计算机是以存储器为核心
 
 ### 现代计算机
-首先，计算机最基本的5大组成部分分别为：输入设备(比如键盘), 存储器(比如内存), 运算器(cpu), 控制器(cpu), 输出设备(显示器)。
+首先，计算机最基本的5大组成部分分别为：输入设备(比如键盘), 存储器(比如内存), 运算器(cpu), 控制器(cpu), 输出设备(显示器)。运算器和控制器等部件
+被集成在一起，统称为中央处理单元。
+
+CPU的功能：
+程序控制。CPU 通过执行指令来控制程序的执行顺序。
+操作控制。一条指令功能的实现需要若干操作信号配合来完成，CPU 产生每条指令的操作信号并将操作信号送往对应的部件，控制相应的部件按指令的功能要求进行操作。
+时间控制。CPU对各种操作进行各类时间上的控制
+数据处理。CPU通过对数据进行算术运算及逻辑运算等方式进行加工处理，数据加工处理的结果被人们所利用。所以，对数据的加工处理也是 CPU 最根本的任务。
+此外，CPU还需要对系统内部和外部的中断(异常)做出响应，进行相应的处理。
 
 * 运算器负责程序运算与逻辑判断等操作
 * 控制器负责协调各周边组件与各单元间的工作
@@ -51,10 +59,12 @@ tags:
 > 指令包括操作码和地址码，地址码存的是这个指令用到的数据的地址。
 
 运算器包括：
-算术逻辑单元ALU。算术逻辑运算。
-累加寄存器。暂时存放中间结果。
-数据缓冲寄存器。暂存 cpu 和 主存间要传输的数据。
-状态条件寄存器。存储一些状态信息。
+算术逻辑单元ALU。负责处理数据，算术运算和逻辑运算。
+累加寄存器。累加器，是一个通用寄存器。当ALU执行运算时，为其提供工作区，暂存数据，运算完成后放回累加器中。
+数据缓冲寄存器。在对内存储器进行读写操作时，暂存 cpu 和 主存间要传输的数据。
+状态条件寄存器。存储一些算术指令和逻辑指令产生的状态标志和控制标志。
+
+例题：计算机执行指令的过程中，需要由CPU的控制器产生每条指令的操作信号并将信号送往相应的部件进行处理，以完成指定的操作。
 
 指令寻址方式：
 立即寻址方式：操作数直接在指令中，速度快，灵活性差
